fix: replace 'any' types with specific types to resolve lint errors

--- a/.github/instructions/a11y.instructions.md
+++ b/.github/instructions/a11y.instructions.md
@@ -1,9 +1,5 @@
 ---
-applies_to:
-  include:
-    - "src/**"
-    - "packages/**"
-    - "app/**"
+applyTo: "src/**,packages/**,app/**"
 ---
 
 # Area Instructions — Accessibility (WCAG 2.2 AA)
